[JPS] Set the jvm args for running JPS tests up
^KTI-1416 In Progress